k8s-manifest/weatherapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  labels:
    app: weather-app
  annotations:
    prometheus.io/port: "http"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: http
