k8s-manifest/weatherapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: sa8oyjqsh9.execute-api.us-west-2.amazonaws.com #Replace the host with the API gateway DNS
      http:
        paths:
          - path: /weather-forecast
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  number: 8082
